K8s/wallarm-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robotshop-wallarm
  namespace: test
  annotations:
    kubernetes.io/ingress.class: wallarm-ingress
    nginx.ingress.kubernetes.io/wallarm-mode: block
    nginx.ingress.kubernetes.io/wallarm-application: "1"
spec:
  ingressClassName: wallarm-ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
